--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+
+	<scm>
+		<url>https://github.com/66-24/personal_finance</url>
+	</scm>
 	<properties>
 		<java.version>21</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
